# ts_anomaly_detection

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: amostra.csv  dados_estendidos.csv
src/analysis/: acf.py  anomaly.py  metrics.py
src/data/: loader.py
src/visualization/: plots.py
